[gd_scene load_steps=6 format=2]

[ext_resource path="res://interface/characters/billyduck_anim.tres" type="Texture" id=1]
[ext_resource path="res://interface/theme.tres" type="Theme" id=2]
[ext_resource path="res://levels/GameOver.gd" type="Script" id=3]

[sub_resource type="DynamicFontData" id=1]
font_path = "res://interface/NotoSerifDisplay-Regular.ttf"

[sub_resource type="DynamicFont" id=2]
size = 26
outline_size = 1
outline_color = Color( 0.0196078, 0.0705882, 0.25098, 1 )
use_filter = true
font_data = SubResource( 1 )

[node name="GameOver" type="CenterContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1.18921
margin_right = 1.18921
theme = ExtResource( 2 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 741.0
margin_top = 259.0
margin_right = 1179.0
margin_bottom = 820.0
custom_constants/separation = 40

[node name="GameOver" type="Label" parent="VBoxContainer"]
margin_right = 438.0
margin_bottom = 83.0
text = "Game Over"
align = 1

[node name="HowFar" type="Label" parent="VBoxContainer"]
margin_top = 123.0
margin_right = 438.0
margin_bottom = 173.0
rect_min_size = Vector2( 0, 50 )
custom_fonts/font = SubResource( 2 )
text = "Your journey was 0 light-years long"

[node name="Texture" type="TextureRect" parent="VBoxContainer"]
margin_top = 213.0
margin_right = 438.0
margin_bottom = 413.0
rect_min_size = Vector2( 200, 200 )
texture = ExtResource( 1 )
expand = true
stretch_mode = 6

[node name="Retry" type="Button" parent="VBoxContainer"]
margin_left = 94.0
margin_top = 453.0
margin_right = 344.0
margin_bottom = 487.0
rect_min_size = Vector2( 250, 0 )
size_flags_horizontal = 4
text = "Retry"

[node name="MainMenu" type="Button" parent="VBoxContainer"]
margin_left = 94.0
margin_top = 527.0
margin_right = 344.0
margin_bottom = 561.0
rect_min_size = Vector2( 250, 0 )
size_flags_horizontal = 4
text = "Main Menu"
[connection signal="pressed" from="VBoxContainer/Retry" to="." method="_on_Retry_pressed"]
[connection signal="pressed" from="VBoxContainer/MainMenu" to="." method="_on_MainMenu_pressed"]
